--- a/backend/app/.env
+++ b/backend/app/.env
@@ -1,3 +1,3 @@
-JWT_SECRET_KEY=iwanttosaythatilovemtuci
-JWT_REFRESH_SECRET_KEY=iwanttosaythatilovemtuci
+JWT_SECRET_KEY=11111111
+JWT_REFRESH_SECRET_KEY=111111
 MONGO_CONNECTION_STRING=mongodb://localhost:27017/
